Copy changes, section clean up add links

--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,6 +1,6 @@
 h1 {
     font-size: 48px;
-    font-family: "futura-pt", sans-serif;
+    font-family: "futura", sans-serif;
     font-weight: normal;
 }
 
