--- a/unit_6/class materials/My example/css/style.css
+++ b/unit_6/class materials/My example/css/style.css
@@ -1,41 +1,45 @@
 body {
 	font-family: helvetica, sans-serif;
-	font-size: 24px;
-	text-align: center;
 }
+
 h1 {
 	color: black;
+	text-align: center;
+	line-height: 2em;
+	font-size: 40px;
 }
 
 h2 {
-	display: block;
+	font-size: 20px;
 }
 
-div {
+
+#container {
 	width: 960px;
 	color: white;
-	/*float: left;*/
-}
-
-p {
-	padding: 20px;
-	text-align: left;
-}
-
-section {
 
 }
 
 #one {
 	background-color: blue;
+	width: 280;
+	padding: 10px;
+	margin: 10px;
 }
 
 #two {
 	background-color: green;
+	width: 280;
+	padding: 10px;
+	margin: 10px;
 }
 
 #three {
 	background-color: grey;
+	width: 280;
+	padding: 10px;
+	margin: 10px;
+
 }
 
 #four {
