--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -131,10 +131,37 @@ p {
 }
 
 #work {
-	background-color: #E89C6C;
+	background-color: #FFB7CF;
 	border: 1px black solid;
     padding: 20px;
 }
+
+/*where should this really go?*/
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+}
+
+#left {
+    background-color: #E582A2;
+    border: 1px black solid;
+    padding: 20px;
+    float: left;
+    width: 46%;
+}
+
+#right {
+    background-color: #E55B88;
+    border: 1px black solid;
+    padding: 20px;
+    float: right;
+    width: 46%;
+}
+
 
 #downloads {
 	background-color: #E89C6C;
