--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -4,7 +4,7 @@
    	background-color: #FFE2B8;
     border: 1px black solid;
     padding: 20px;
-    width: 100%;
+    width: auto;
 }
 
 body {
@@ -26,7 +26,7 @@ header {
     padding: 20px;
 	font-size: 16px;
 	font-weight: normal;
-    width: 100%;
+    width: auto;
 }
 
 .logo {    
