--- a/example/css/style.css
+++ b/example/css/style.css
@@ -24,10 +24,14 @@ h2 {
 	line-height: 0;
 }
 
+section {
+	margin: 0 auto;
+}
+
 article {
 	float: left;
-	padding-bottom: 40px;
-	margin: 0 auto;
+	width: 280px;
+	padding-bottom: 20px 40px;
 }
 
 #one {
