--- a/example/css/style.css
+++ b/example/css/style.css
@@ -30,8 +30,9 @@ section {
 
 article {
 	float: left;
-	width: 280px;
-	padding-bottom: 20px 40px;
+	width: 30%;
+    border: 1px solid black;
+	padding: 20px 20px;
 }
 
 #one {
