--- a/example/css/style.css
+++ b/example/css/style.css
@@ -26,13 +26,15 @@ h2 {
 
 section {
 	margin: 0 auto;
+	width: 100%;
 }
 
 article {
 	float: left;
 	width: 30%;
+	height: 170px;
     border: 1px solid black;
-	padding: 20px 20px;
+	padding: 10px 10px;
 }
 
 #one {
