--- a/unit_8/8/css/style.css
+++ b/unit_8/8/css/style.css
@@ -149,7 +149,6 @@ p {
 }
 
 /*where should this really go? DO I need this when I have dlear:both meethod in #downloads?*/
-
 .clearfix:after {
     visibility: hidden;
     display: block;
@@ -209,12 +208,22 @@ footer {
     padding: 1%;
 }
 
-@media only screen and (max-width: 1060px) {
+@media only screen and (max-width: 1058px) {
   .logo {    
     font-size: 2.75em;
     }
+}
 
-h1 {
+@media only screen and (max-width: 768px) {
+   .logo {    
+    font-size: 2em;
+    text-align: center;
+    }
+  nav {    
+    float: none;
+    }
+
+/*h1 {
     font-size: .75;
     }
 
@@ -222,7 +231,7 @@ h1 {
     font-size: .1em;
       }
   
-}
+}*/
 
 
 
