--- a/unit_8/8/css/style.css
+++ b/unit_8/8/css/style.css
@@ -1,33 +1,38 @@
 @import url(https://fonts.googleapis.com/css?family=PT+Sans);
-
+* { margin:0;padding:0;box-sizing:border-box;}
 .wrapper {
-    width: 100%;
+    max-width: 75em;
+    margin: auto;
 }
 
 #heroborder {
  	background-image: url("..//images/direwolf2.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-    padding: 20px;
+ 	background-repeat: no-repeat;
+ 	background-size: cover;
+ 	padding: 2em;
+ 	height: 100vh;
+ 	color: #FFF;
 }
 
 body {
-	color: black;
+	color: rgba(0,0,0,.87);
 	font-family: 'proxima-nova', sans-serif;
-    width: 100%;
-    margin: 0px;
+	line-height: 1.5;
 }
 
 header {
 	font-size: 1em;
 	font-weight: normal;
-    width: 100%;
+	width: 100%;
+	float: left;
+	padding: 2em;
 }
 
 nav {
 	float: right;
 	text-transform: uppercase;
 	letter-spacing: .5em;
+	margin-top: 2em;
 }
 
 nav a {
@@ -37,70 +42,58 @@ nav a {
 
 a {
     text-decoration: none;
+    transition-duration: .25s;
 }
 
 #hero {
-    padding: 1%;
-	text-align: center;
-	min-height: 100vh;
+    padding: 2em;
+    height: 100%;
     border: 1px solid grey;
 }
 
-.logo {    
+.logo {
 	color: white;
     /*color is not working*/
 	background-color: rgba(3 3 3 .5);
 	font-size: 3em;
 	font-family: 'PT Sans', sans-serif;
-    font-weight: normal;
-    letter-spacing: .75em;
+	font-weight: normal;
+	letter-spacing: .75em;
 	text-align: left;
 	margin-top: 0;
-	line-height: 1.5em}
+	line-height: 1.5em;
+	float: left;
+	}
 
 #title {
-	color: white;
-	font-family: 'proxima-nova', sans-serif;
-	font-size: 3em;
-	text-align: left;
+	
     /* placement with margin - good idea? 
     why does margin spill to bottom if tag is margin-top?*/
-    margin-top: 140px;
 }
 
 #byline {
-	color: white;
-	text-align: left;
-	font-family: 'proxima-nova', sans-serif;
-	font-weight: normal;
 	font-style: italic;
-	font-size: 1.5em;
-	line-height: 1.5em;
 }
 
 h1 {
-	color: black;	
-    font-size: 1em;
-    font-weight: normal;
-    text-align: left;
-    margin-left: 20px;
+	font-size: 3em;
+	font-weight: normal;
+	text-align: left;
 }
 
-h2 {	
+h2 {
 	font-size: 1.5em;
 	font-weight: normal;
-	margin-left: 20px;
-	margin-bottom: 0;
 }
 
 .primarybutton {
-    color: white;
+    color: inherit;
     background-color: transparent;
-    padding: 16px 32px;
+    padding: 1em 2em;
     font-size: 1em;
-    border: 2px solid white;
-    position: relative;
-    top: 200px;
+    border: 2px solid;
+    display: inline-block;
+    margin-top: 1em;
 }
 
 .primarybutton:hover {
@@ -123,19 +116,17 @@ ul {
 
 li {
 	float: left;
-    font-size: 1.15em;
-    width: 30%;
-    padding-left: 2%;
- 	text-align: center;
-  	line-height: 50px;
-  	color: black;
+	font-size: 1.15em;
+	width: 33.33%;
+	/* padding-left: 2%; */
+	text-align: center;
+	line-height: 50px;
+	color: black;
 }
 
 p {
-	font-size: 1.15em;
 	font-weight: normal;
 	line-height: 1.5em;
-	padding: 0px 20px 0px 20px;
 }
 
 #about-me {
@@ -161,8 +152,9 @@ p {
 article {
     font-size: .75em;
     float: left;
-    padding-left: 2%;
-    width: 30%;
+    /* padding-left: 2%; */
+    width: 33.33%;
+    padding: .5em;
 }
 
 #projectborder {
@@ -170,7 +162,7 @@ article {
     min-height: 145px;
     background-color: rgba(74, 74, 74, .25);
     color: white;
-
+    padding: 2em;
 }
 
 #proj1 #projectborder {
@@ -189,6 +181,10 @@ article {
     color: white;
     font-size: 1em;
     /*how do I center the cta within the box?*/
+    display: block;
+    border: 2px solid;
+    padding: 1em 2em;
+    text-align: center;
 }
 
 .secondarybutton:hover {
