--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -54,8 +54,6 @@ a {
 
 .logo {
 	color: white;
-    /*color is not working*/
-	background-color: rgba(3 3 3 .5);
 	font-size: 3em;
 	font-family: 'PT Sans', sans-serif;
 	font-weight: normal;
@@ -65,12 +63,6 @@ a {
 	line-height: 1.5em;
 	float: left;
 	}
-
-#title {
-	
-    /* placement with margin - good idea? 
-    why does margin spill to bottom if tag is margin-top?*/
-}
 
 #byline {
 	font-style: italic;
@@ -130,27 +122,15 @@ p {
 	line-height: 1.5em;
 }
 
-#about-me {
-	position: relative;
-    padding: 1%;
+#about {
+
 }
 
 #work {
-	clear: both;
-    padding: 1%;
+
 }
 
-/*where should this really go? DO I need this when I have dlear:both meethod in #downloads?*/
-.clearfix:after {
-    visibility: hidden;
-    display: block;
-    font-size: 0;
-    content: " ";
-    clear: both;
-    height: 0;
-}
-/*why arenb;t these columns spaced out like the li columns?*/
-article {
+#projects {
     font-size: .75em;
     float: left;
     /* padding-left: 2%; */
@@ -181,49 +161,78 @@ article {
 .secondarybutton {
     color: white;
     font-size: 1em;
-    /*how do I center the cta within the box?*/
     display: block;
     border: 2px solid;
     padding: 1em 2em;
     text-align: center;
+    background-color: transparent;
 }
 
 .secondarybutton:hover {
-    font-weight: bolder;
+    color: grey;
+    border: 2px solid grey;
 }
 
 #downloads {
 	clear: both;
-    padding: 1%;
+}
+
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
 }
 
 #contact {
-    padding: 1%;
+
 }
 
 footer {
-    padding: 1%;
+
 }
 
-@media only screen and (max-width: 1058px) {
-  .logo {    
-    font-size: 2.75em;
+@media only screen and (max-width: 1150px) {
+    .logo {    
+        letter-spacing: .5em;
+        text-align: center;
+        float: none;
+    }
+
+    header {
+        padding: 0;
+    }
+
+    h1 {
+        font-size: 2.75em;
+    }
+
+    #byline {
+        font-size: 1.25em;
     }
 }
 
-@media only screen and (max-width: 768px) {
-   .logo {    
-    font-size: 2em;
-    text-align: center;
+@media only screen and (max-width: 1024) {
+    .wrapper {
     }
-  nav {    
-    float: none;
+}
+
+
+@media only screen and (max-width: 780px) {
+    .logo {    
+        font-size: 2em;
+    }
+  
+    nav {    
+        text-align: center;
+        float: none;
     }
 
-h1, h2, p{
-    font-size: .75;
-    text-align: center;
-
+    p {
+        font-size: .5em;
+        text-align: center;
     }  
 }
 
